--- a/source/home.html
+++ b/source/home.html
@@ -53,7 +53,7 @@
               {% endif %}
             {% endcapture %}
             <div class="product-list-thumb {{ product.css_class }}">
-              <a class="product-list-link product-list-link--{{ theme.product_grid_info }}" href="{{ product.url }}" title="View {{ product.name | escape }}">
+              <a class="product-list-link {% if theme.featured_products_layout != 'alternating' %}product-list-link--{{ theme.product_grid_info }}{% endif %} {{ theme.alternating_product_image_style }}" href="{{ product.url }}" title="View {{ product.name | escape }}">
                 <div class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}">
                   <img
                     alt=""
@@ -105,23 +105,15 @@
       {% if theme.home_page_categories_header %}
         <h2 class="featured-categories-header">{{ theme.home_page_categories_header }}</h2>
       {% endif %}
-      <div class="product-list product-list--center">
+      <div class="product-list product-list--center category-list">
         {% for category in categories.active %}
           <div class="product-list-thumb">
-            <a class="product-list-link" href="{{ category.url }}" title="View {{ category.name | escape }}">
+            <a class="product-list-link category-link category-link--{{ theme.category_image_style }}" href="{{ category.url }}" title="View {{ category.name | escape }}">
               {% for product in category.products limit:1 %}
                 {% assign image_width = product.image.width | times: 1.0 %}
                 {% assign image_height = product.image.height | times: 1.0 %}
                 {% assign aspect_ratio = image_width | divided_by: image_height %}
-                {% assign product_status = '' %}
-                {% case product.status %}
-                  {% when 'active' %}
-                    {% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
-                  {% when 'sold-out' %}
-                    {% assign product_status = 'Sold out' %}
-                  {% when 'coming-soon' %}
-                    {% assign product_status = 'Coming soon' %}
-                {% endcase %}
+
                 {% capture image_class %}
                   {% if product.image.height > product.image.width %}
                     image-tall
@@ -132,10 +124,10 @@
                   {% endif %}
                 {% endcapture %}
 
-                <div class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}">
+                <div class="product-list-image-container product-list-image-container-cover">
                   <img
                     alt=""
-                    class="blur-up product-list-image lazyload grid-{{ theme.grid_image_style }}"
+                    class="blur-up product-list-image lazyload grid-cover"
                     src="{{ product.image | product_image_url | constrain: 20 }}"
                     {% unless theme.grid_image_style == 'default' %}data-aspectratio="{{ aspect_ratio }}"{% endunless %}
                     data-srcset="
