--- a/source/home.html
+++ b/source/home.html
@@ -27,9 +27,13 @@
 <div class="home-content">
   <h1 class="page-title">{{ theme.featured_header }}</h1>
   {% paginate products from products.current by theme.featured_products order:theme.featured_order %}
+    {% assign num_results = paginate.items %}
+    {% if paginate.next.is_link %}
+      {% assign num_results = paginate.current_offset | plus: paginate.page_size %}
+    {% endif %}
     {% if products != blank %}
       <div class="product-list-container">
-        <div class="product-list product-list--{{ theme.featured_products_layout }} {% if products.size < 3 %}product-list--center{% endif %}">
+        <div class="product-list product-list--{{ theme.featured_products_layout }} {% if num_results < 3 %}product-list--center{% endif %}">
           {% for product in products %}
             {% assign image_width = product.image.width | times: 1.0 %}
             {% assign image_height = product.image.height | times: 1.0 %}
