--- a/source/home.html
+++ b/source/home.html
@@ -58,6 +58,7 @@
                     image-square
                   {% endif %}
                 {% endcapture %}
+                {% capture status_class %}{% if product.status == 'active' and product.on_sale %}status-primary{% else %}status-secondary{% endif %}{% endcapture %}
                 <div class="product-list-thumb {{ product.css_class }}">
                   <a class="product-list-link {% if theme.featured_products_layout != 'alternating' %}product-list-link--{{ theme.product_grid_info }}{% endif %} {{ theme.alternating_product_image_style }}" href="{{ product.url }}" title="View {{ product.name | escape }}">
                     <div class="product-list-image-container product-list-image-container-{{ theme.grid_image_style }}">
@@ -77,7 +78,7 @@
                         "
                         data-sizes="auto"
                       >
-                      {% if product_status != blank %}<div class="product-list-thumb-status">{{ product_status }}</div>{% endif %}
+                      {% if product_status != blank %}<div class="product-list-thumb-status {{ status_class }}">{{ product_status }}</div>{% endif %}
                     </div>
                     <div class="product-list-thumb-info">
                       <div class="product-list-thumb-name">{{ product.name }}</div>
@@ -92,7 +93,7 @@
                         <button class="button product-list-shop-now">Shop Now</button>
                       {% endif %}
 
-                      {% if product_status != blank %}<div class="product-list-thumb-status">{{ product_status }}</div>{% endif %}
+                      {% if product_status != blank %}<div class="product-list-thumb-status {{ status_class }}">{{ product_status }}</div>{% endif %}
                     </div>
                   </a>
                 </div>
