--- a/source/product.html
+++ b/source/product.html
@@ -50,6 +50,9 @@
                 {% if theme.product_image_zoom %}</a>{% else %}</div>{% endif %}
               </div>
             {% endfor %}
+            <div class="splide__slide" data-splide-youtube="https://www.youtube.com/watch?v=a8eU6hTAHEE">
+              <img src="https://img.youtube.com/vi/a8eU6hTAHEE/maxresdefault.jpg">
+            </div>
           </div>
         </div>
         {% if product.images.size > 5 %}
@@ -79,6 +82,14 @@
               </button>
             </li>
           {% endfor %}
+          <li class="product-thumbnails--item">
+            <button class="product-thumbnails--change-slide" type="button" tabindex="0">
+              <img 
+                src="https://img.youtube.com/vi/a8eU6hTAHEE/maxresdefault.jpg"
+                data-sizes="auto"
+              >
+            </button>
+          </li>
         </ul>
         <button aria-label="Slide right" aria-controls="carousel-thumbnail" class="thumb-scroller thumb-scroller--right" data-direction="right">
           <svg aria-hidden="true" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6"><path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/></svg>
