chore: polish empty cart message

--- a/source/cart.html
+++ b/source/cart.html
@@ -13,7 +13,7 @@
     {% if theme.cart_text %}
       <div class="message-banner message-banner--cart">{{ theme.cart_text }}</div>
     {% endif %}
-    <div class="message-banner message-banner--no-bg message-banner--centered message-banner--empty-cart">Your cart is empty! Sounds like a good time to start shopping.</div>
+    <div class="message-banner message-banner--no-bg message-banner--centered message-banner--empty-cart">Your cart is empty!</div>
     <a href="/products" class="button">Shop Now</a>
   </div>
 {% else %}
