--- a/source/layout.html
+++ b/source/layout.html
@@ -194,12 +194,13 @@
             <ul class="footer-nav--primary">
               <li><a href="/">{{ pages.home.name }}</a></li>
               <li><a href="/products">{{ pages.products.name }}</a></li>
-              <li><a href="/contact">{{ pages.contact.name }}</a></li>
+              {% for category in categories.active %}
+                <li>{{ category | link_to }}</li>
+              {% endfor %}
             </ul>
           </div>
         </nav>
 
-        {% if pages.all != empty %}
         <nav class="footer-nav footer-nav--links" aria-label="Secondary">
           <div class="footer-nav--container">
             <div class="footer-nav-title">Pages</div>
@@ -207,10 +208,10 @@
               {% for page in pages.all %}
                 <li>{{ page | link_to }}</li>
               {% endfor %}
+              <li><a href="/contact">{{ pages.contact.name }}</a></li>
             </ul>
           </div>
         </nav>
-        {% endif %}
 
       {% if theme.instagram_url != blank
         or theme.tiktok_url != blank
