--- a/source/home.html
+++ b/source/home.html
@@ -7,7 +7,7 @@
 
 {% if has_hero_image or has_slideshow %}
   <div class="home-hero home-hero--{{ theme.hero_image_width }} {% if has_slideshow %}home-hero--slideshow{% endif %} {% unless theme.hero_image != blank or has_slideshow %}home-hero--no-image{% endunless %}">
-    {% if theme.image_sets.slideshow.size > 0 %}
+    {% if has_slideshow %}
       <div class="{% if theme.image_sets.slideshow.size > 1 %}splide{% endif %} home-slideshow">
         <div class="splide__track">
           <div class="splide__list">
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-    {% elsif theme.hero_image != blank %}
+    {% elsif has_hero_image %}
       <img
         alt=""
         class="home-hero-image lazyload blur-up"
@@ -38,11 +38,11 @@
         data-sizes="auto"
       >
     {% endif %}
-    {% if theme.image_sets.slideshow.size == 0 %}
-    <div class="home-hero-overlay"></div>
+    {% if has_slideshow == false %}
+      <div class="home-hero-overlay"></div>
     {% endif %}
     {% if has_slideshow or has_hero_image %}
-      <div class="home-hero-content {% if theme.image_sets.slideshow.size > 0 %}home-hero-content--slidehshow{% endif %}">
+      <div class="home-hero-content {% if theme.image_sets.slideshow.size > 0 %}home-hero-content--slideshow{% endif %}">
         {% if theme.hero_welcome_text != blank %}<div class="home-hero-text">{{ theme.hero_welcome_text }}</div>{% endif %}
         {% if theme.hero_button_text != blank %}<a href="/products" class="home-hero-button">{{ theme.hero_button_text }}</a>{% endif %}
       </div>
