--- a/source/layout.html
+++ b/source/layout.html
@@ -131,10 +131,14 @@
       <nav aria-label="Main" class="top-nav--links">
         <ul>
           <li><a href="/products">{{ pages.products.name }}</a></li>
-          {% for page in pages.all limit: theme.nav_items %}
-            <li>{{ page | link_to }}</li>
-          {% endfor %}
-          {% if theme.nav_items < 3 %}
+          
+          {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'pages_only' %}
+            {% for page in pages.all limit: theme.nav_items %}
+              <li>{{ page | link_to }}</li>
+            {% endfor %}
+          {% endif %}
+          
+          {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'contact_only' %}
             <li><a href="/contact">{{ pages.contact.name }}</a></li>
           {% endif %}
         </ul>
