--- a/source/layout.html
+++ b/source/layout.html
@@ -20,6 +20,15 @@
       </div>
     {% endif %}
 
+    {% comment %}
+      The products link text is set to "All products" by default. If the name of the products page is not "products", it will use that name instead.
+    {% endcomment %}
+    {% assign products_link_text = "All products" %}
+    {% assign lowercase_products_name = pages.products.name | downcase %}
+    {% if lowercase_products_name != "products" %}
+      {% assign products_link_text = pages.products.name %}
+    {% endif %}
+
     <div id="navigation-modal" role="dialog" aria-modal="true" aria-hidden="true">
       <div class="overlay_background"></div>
       <div class="overlay_content">
@@ -34,10 +43,24 @@
           <nav aria-label="Primary navigation">
             <ul class="overlay-page-list">
               <li><a href="/">{{ pages.home.name }}</a></li>
-              <li><a href="/products">{{ pages.products.name }}</a></li>
-              {% for page in pages.all %}
-                <li>{{ page | link_to }}</li>
-              {% endfor %}
+              <li><a href="/products">{{ products_link_text }}</a></li>
+              {% if categories.active %}
+                {% if categories.active.size > 3 %}
+                  <li class="divider"></li>
+                {% endif %}
+                {% for category in categories.active %}
+                  <li>{{ category | link_to }}</li>
+                {% endfor %}
+              {% endif %}
+              {% if pages.all.size > 0 %}
+                <li class="divider"></li>
+                {% for page in pages.all %}
+                  <li>{{ page | link_to }}</li>
+                {% endfor %}
+              {% endif %}
+              {% if pages.all.size == 0 and categories.active.size > 3 %}
+                <li class="divider"></li>
+              {% endif %}
               <li><a href="/contact">{{ pages.contact.name }}</a></li>
             </ul>
           </nav>
@@ -121,7 +144,7 @@
 
 
     <div class="top-nav">
-      <div class="mobile-menu">
+      <div class="top-nav__mobile-menu">
         <button class="icon-button open-mobile-navigation" aria-label="Open navigation menu" aria-expanded="false" aria-controls="navigation-modal">
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="18" height="20" aria-hidden="true" viewBox="8 11 17.5 15">
             <path d="M8 12.3c0-.7.5-1.3 1.3-1.3h15c.6 0 1.2.6 1.2 1.3 0 .7-.6 1.2-1.3 1.2h-15c-.7 0-1.2-.5-1.2-1.3Zm0 6.2c0-.7.5-1.3 1.3-1.3h15c.6 0 1.2.6 1.2 1.3 0 .7-.6 1.3-1.3 1.3h-15c-.7 0-1.2-.6-1.2-1.3Zm17.5 6.3c0 .7-.6 1.2-1.3 1.2h-15c-.7 0-1.2-.5-1.2-1.3 0-.6.5-1.2 1.3-1.2h15c.6 0 1.2.6 1.2 1.3Z"/>
@@ -130,28 +153,80 @@
       </div>
       <nav aria-label="Main" class="top-nav--links">
         <ul>
-          <li><a href="/products">{{ pages.products.name }}</a></li>
-          
-          {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'pages_only' %}
-            {% for page in pages.all limit: theme.nav_items %}
-              <li>{{ page | link_to }}</li>
-            {% endfor %}
+          {% if theme.nav_menu_style == 'dropdown' %}
+            <li>
+              {% if categories.active.size > 0 %}
+                <div class="top-nav__dropdown">
+                  <button class="top-nav__dropdown-button" aria-label="Open products navigation" aria-controls="header-dropdown-products" aria-expanded="false">
+                    <div class="top-nav__dropdown-label">{{ theme.products_global_nav_dropdown_text | strip | default: "Shop" }}</div>
+                    <svg aria-hidden="true" fill="currentColor" class="top-nav__dropdown-arrow" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6">
+                      <path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/>
+                    </svg>
+                  </button>
+                  <div class="top-nav__dropdown-content" id="header-dropdown-products" aria-hidden="true">
+                    <ul class="top-nav__dropdown-list">
+                      <li><a href="/products">{{ products_link_text }}</a></li>
+                      {% for category in categories.active %}
+                        <li>{{ category | link_to }}</li>
+                      {% endfor %}
+                    </ul>
+                  </div>
+                </div>
+              {% else %}
+                <a href="/products">{{ pages.products.name }}</a>
+              {% endif %}
+            </li>
+            {% if pages.all.size > 0 %}
+              <li>
+                <div class="top-nav__dropdown">
+                  <button class="top-nav__dropdown-button" aria-label="Open pages navigation" aria-controls="header-dropdown-pages" aria-expanded="false">
+                    <div class="top-nav__dropdown-label">{{ theme.pages_global_nav_dropdown_text | strip | default: "More" }}</div>
+                    <svg aria-hidden="true" fill="currentColor" class="top-nav__dropdown-arrow" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6">
+                      <path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/>
+                    </svg>
+                  </button>
+                  <div class="top-nav__dropdown-content" id="header-dropdown-pages" aria-hidden="true">
+                    {% if pages.all.size > 0 %}
+                      <ul class="top-nav__dropdown-list">
+                        {% for page in pages.all %}
+                          <li>{{ page | link_to }}</li>
+                        {% endfor %}
+                        <li><a href="/contact">{{ pages.contact.name }}</a></li>
+                      </ul>
+                    {% endif %}
+                  </div>
+                </div>
+              </li>
+            {% else %}
+              {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'contact_only' %}
+                <li><a href="/contact">{{ pages.contact.name }}</a></li>
+              {% endif %}
+            {% endif %}
+          {% else %}
+            <li><a href="/products">{{ pages.products.name }}</a></li>
+
+            {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'pages_only' %}
+              {% for page in pages.all limit: theme.nav_items %}
+                <li>{{ page | link_to }}</li>
+              {% endfor %}
+            {% endif %}
+
+            {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'contact_only' %}
+              <li><a href="/contact">{{ pages.contact.name }}</a></li>
+            {% endif %}
           {% endif %}
           
-          {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'contact_only' %}
-            <li><a href="/contact">{{ pages.contact.name }}</a></li>
-          {% endif %}
         </ul>
       </nav>
-      <div class="top-nav--icons">
+      <div class="top-nav__icons">
         {% if theme.show_search %}
-          <button class="nav-button open-search" type="button" aria-haspopup="dialog" aria-controls="search-modal" title="Open search menu">
+          <button class="top-nav__interactive top-nav__icons-search open-search" type="button" aria-haspopup="dialog" aria-controls="search-modal" title="Open search menu">
             <svg aria-hidden="true" fill="currentColor" width="20" height="20" viewBox="0 0.5 19.99 20.03">
               <path d="M16.25 8.625C16.25 10.4219 15.6641 12.1016 14.6875 13.4297L19.6094 18.3906C20.1172 18.8594 20.1172 19.6797 19.6094 20.1484C19.1406 20.6562 18.3203 20.6562 17.8516 20.1484L12.8906 15.1875C11.5625 16.2031 9.88281 16.75 8.125 16.75C3.63281 16.75 0 13.1172 0 8.625C0 4.17188 3.63281 0.5 8.125 0.5C12.5781 0.5 16.25 4.17188 16.25 8.625ZM8.125 14.25C10.1172 14.25 11.9531 13.1953 12.9688 11.4375C13.9844 9.71875 13.9844 7.57031 12.9688 5.8125C11.9531 4.09375 10.1172 3 8.125 3C6.09375 3 4.25781 4.09375 3.24219 5.8125C2.22656 7.57031 2.22656 9.71875 3.24219 11.4375C4.25781 13.1953 6.09375 14.25 8.125 14.25Z"></path>
             </svg>
           </button>
         {% endif %}
-        <a class="cart-link" href="/cart" aria-label="View cart, {{ cart.item_count | pluralize: 'Item', 'Items' }}">
+        <a class="top-nav__icons-cart" href="/cart" aria-label="View cart, {{ cart.item_count | pluralize: 'Item', 'Items' }}">
           <svg aria-hidden="true" fill="currentColor" width="23" height="20" viewBox="0 0.5 22.28 20.03">
             <path d="M0 1.4375C0 0.929688 0.390625 0.5 0.9375 0.5H2.69531C3.55469 0.5 4.33594 1.00781 4.6875 1.75H20.7422C21.7578 1.75 22.5 2.72656 22.2266 3.74219L20.625 9.67969C20.3125 10.9297 19.1797 11.75 17.9297 11.75H6.64062L6.875 12.8828C6.95312 13.3125 7.34375 13.625 7.77344 13.625H19.0625C19.5703 13.625 20 14.0547 20 14.5625C20 15.1094 19.5703 15.5 19.0625 15.5H7.77344C6.44531 15.5 5.27344 14.5625 5.03906 13.2344L3.00781 2.64844C2.96875 2.49219 2.85156 2.375 2.69531 2.375H0.9375C0.390625 2.375 0 1.98438 0 1.4375ZM5 18.625C5 17.9609 5.35156 17.375 5.9375 17.0234C6.48438 16.6719 7.22656 16.6719 7.8125 17.0234C8.35938 17.375 8.75 17.9609 8.75 18.625C8.75 19.3281 8.35938 19.9141 7.8125 20.2656C7.22656 20.6172 6.48438 20.6172 5.9375 20.2656C5.35156 19.9141 5 19.3281 5 18.625ZM18.125 16.75C18.7891 16.75 19.375 17.1406 19.7266 17.6875C20.0781 18.2734 20.0781 19.0156 19.7266 19.5625C19.375 20.1484 18.7891 20.5 18.125 20.5C17.4219 20.5 16.8359 20.1484 16.4844 19.5625C16.1328 19.0156 16.1328 18.2734 16.4844 17.6875C16.8359 17.1406 17.4219 16.75 18.125 16.75Z"></path>
           </svg>
