fix: removing featured categories button centering class

--- a/source/home.html
+++ b/source/home.html
@@ -146,7 +146,7 @@
       <div class="product-list product-list--center category-list category-list--{{ category_list_style }} {% if num_results < 3 %}product-list--center{% endif %}">
         {% for category in categories.active limit:theme.featured_categories %}
           {% if theme.home_page_categories_style == "text" %}
-            <a class="button button--centered button--secondary" href="{{ category.url }}">{{ category.name }}</a>
+            <a class="button button--secondary" href="{{ category.url }}">{{ category.name }}</a>
           {% else %}
             <div class="product-list-thumb category">
               <a class="product-list-link category-link category-link--{{ theme.category_image_style }}" href="{{ category.url }}" title="View {{ category.name | escape }}">
