--- a/source/product.html
+++ b/source/product.html
@@ -131,7 +131,15 @@
       {% if product_status != blank %}<div class="product-detail__status {{ status_class }}">{{ product_status }}</div>{% endif %}
       <h1 class="page-title page-title--left product-detail__title">{{ product.name }}</h1>
       <div class="product-detail__pricing">
-        {% unless product.status == 'sold-out' and theme.show_sold_out_product_prices == false %}
+        {% assign hide_price = false %}
+        {% if product.status == 'sold-out' and theme.show_sold_out_product_prices == false %}
+          {% assign hide_price = true %}
+        {% endif -%}
+        {% if product.status == 'coming-soon' and theme.show_coming_soon_product_prices == false %}
+          {% assign hide_price = true %}
+        {% endif %}
+
+        {% unless hide_price %}
           {{ product_pricing }}
         {% endunless %}
       </div>
