--- a/source/layout.html
+++ b/source/layout.html
@@ -36,20 +36,11 @@
       </div>
     {% endif %}
 
-    {% comment %}
-      The products link text is set to "All products" by default. If the name of the products page is not "products", it will use that name instead.
-    {% endcomment %}
-    {% assign products_link_text = "All products" %}
-    {% assign lowercase_products_name = pages.products.name | downcase %}
-    {% if lowercase_products_name != "products" %}
-      {% assign products_link_text = pages.products.name %}
-    {% endif %}
-
     <div id="navigation-modal" role="dialog" aria-modal="true" aria-hidden="true">
       <div class="overlay_background"></div>
       <div class="overlay_content">
         <div class="navigation-modal-header">
-          <button type="button" class="icon-button close-mobile-navigation" title="Close navigation">
+          <button type="button" class="icon-button close-mobile-navigation" aria-label="Close navigation">
             <svg aria-hidden="true" fill="currentColor" width="15" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="9.2 12.3 12.5 12.5">
               <path d="m21.4 14.4-4.1 4.1 4 4.1c.6.5.6 1.3 0 1.8-.4.5-1.2.5-1.7 0l-4.1-4.1-4.1 4.1c-.5.5-1.3.5-1.8 0s-.5-1.3 0-1.8l4.1-4.1-4.1-4.1c-.5-.5-.5-1.3 0-1.8s1.3-.5 1.8 0l4.1 4.1 4.1-4c.5-.6 1.3-.6 1.8 0 .5.4.5 1.2 0 1.7Z"/>
             </svg>
@@ -58,8 +49,8 @@
         <div class="navigation-modal-content">
           <nav aria-label="Primary navigation">
             <ul class="overlay-page-list">
-              <li><a href="/">{{ pages.home.name }}</a></li>
-              <li><a href="/products">{{ products_link_text }}</a></li>
+              <li><a href="/">{{ t['navigation.home'] }}</a></li>
+              <li><a href="/products">{{ t['navigation.products'] }}</a></li>
               {% if categories.active %}
                 {% if categories.active.size > 3 %}
                   <li class="divider"></li>
@@ -83,7 +74,7 @@
                 <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
               {% endif %}
               {% if store.website != blank %}
-                <li><a href="{{ store.website }}">Back to site</a></li>
+                <li><a href="{{ store.website }}">{{ t['navigation.back_to_site'] }}</a></li>
               {% endif %}
             </ul>
           </nav>
@@ -181,14 +172,14 @@
               {% if categories.active.size > 0 %}
                 <div class="top-nav__dropdown">
                   <button class="top-nav__dropdown-button" aria-label="Open products navigation" aria-controls="header-dropdown-products" aria-expanded="false">
-                    <div class="top-nav__dropdown-label">{{ theme.products_global_nav_dropdown_text | strip | default: "Shop" }}</div>
+                    <div class="top-nav__dropdown-label">{{ t['navigation.shop'] }}</div>
                     <svg aria-hidden="true" fill="currentColor" class="top-nav__dropdown-arrow" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6">
                       <path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/>
                     </svg>
                   </button>
                   <div class="top-nav__dropdown-content" id="header-dropdown-products" aria-hidden="true">
                     <ul class="top-nav__dropdown-list">
-                      <li><a href="/products">{{ products_link_text }}</a></li>
+                      <li><a href="/products">{{ t['navigation.products'] }}</a></li>
                       {% for category in categories.active %}
                         <li>{{ category | link_to }}</li>
                       {% endfor %}
@@ -196,14 +187,14 @@
                   </div>
                 </div>
               {% else %}
-                <a href="/products">{{ pages.products.name }}</a>
+                <a href="/products">{{ t['navigation.products'] }}</a>
               {% endif %}
             </li>
             {% if pages.all.size > 0 and theme.nav_page_display != "none" %}
               <li>
                 <div class="top-nav__dropdown">
                   <button class="top-nav__dropdown-button" aria-label="Open pages navigation" aria-controls="header-dropdown-pages" aria-expanded="false">
-                    <div class="top-nav__dropdown-label">{{ theme.pages_global_nav_dropdown_text | strip | default: "More" }}</div>
+                    <div class="top-nav__dropdown-label">{{ t['navigation.more'] }}</div>
                     <svg aria-hidden="true" fill="currentColor" class="top-nav__dropdown-arrow" viewBox="0 0 15 7.6" enable-background="new 0 0 15 7.6">
                       <path d="M15 1.1l-7.5 6.5-7.5-6.3 1-1.2 6.5 5.5 6.5-5.6z"/>
                     </svg>
@@ -218,7 +209,7 @@
                           <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
                         {% endif %}
                         {% if store.website != blank %}
-                          <li><a href="{{ store.website }}">Back to site</a></li>
+                          <li><a href="{{ store.website }}">{{ t['navigation.back_to_site'] }}</a></li>
                         {% endif %}
                       </ul>
                     {% endif %}
@@ -227,11 +218,11 @@
               </li>
             {% else %}
               {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'contact_only' %}
-                <li><a href="/contact">{{ pages.contact.name }}</a></li>
+                <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
               {% endif %}
             {% endif %}
           {% else %}
-            <li><a href="/products">{{ pages.products.name }}</a></li>
+            <li><a href="/products">{{ t['navigation.products'] }}</a></li>
 
             {% if theme.nav_page_display == 'all' or theme.nav_page_display == 'pages_only' %}
               {% for page in pages.all limit: theme.nav_items %}
@@ -243,7 +234,7 @@
               <li><a href="/contact">{{ t['navigation.contact'] }}</a></li>
             {% endif %}
             {% if store.website != blank %}
-              <li><a href="{{ store.website }}">Back to site</a></li>
+              <li><a href="{{ store.website }}">{{ t['navigation.back_to_site'] }}</a></li>
             {% endif %}
           {% endif %}
           
@@ -251,13 +242,13 @@
       </nav>
       <div class="top-nav__icons">
         {% if theme.show_search %}
-          <button class="top-nav__interactive top-nav__icons-search open-search" type="button" aria-haspopup="dialog" aria-controls="search-modal" title="Open search menu">
+          <button class="top-nav__interactive top-nav__icons-search open-search" type="button" aria-haspopup="dialog" aria-controls="search-modal" title="{{ t['navigation.search'] }}">
             <svg aria-hidden="true" fill="currentColor" width="20" height="20" viewBox="0 0.5 19.99 20.03">
               <path d="M16.25 8.625C16.25 10.4219 15.6641 12.1016 14.6875 13.4297L19.6094 18.3906C20.1172 18.8594 20.1172 19.6797 19.6094 20.1484C19.1406 20.6562 18.3203 20.6562 17.8516 20.1484L12.8906 15.1875C11.5625 16.2031 9.88281 16.75 8.125 16.75C3.63281 16.75 0 13.1172 0 8.625C0 4.17188 3.63281 0.5 8.125 0.5C12.5781 0.5 16.25 4.17188 16.25 8.625ZM8.125 14.25C10.1172 14.25 11.9531 13.1953 12.9688 11.4375C13.9844 9.71875 13.9844 7.57031 12.9688 5.8125C11.9531 4.09375 10.1172 3 8.125 3C6.09375 3 4.25781 4.09375 3.24219 5.8125C2.22656 7.57031 2.22656 9.71875 3.24219 11.4375C4.25781 13.1953 6.09375 14.25 8.125 14.25Z"></path>
             </svg>
           </button>
         {% endif %}
-        <a class="top-nav__icons-cart" href="/cart" aria-label="View cart, {{ cart.item_count | pluralize: 'Item', 'Items' }}">
+        <a class="top-nav__icons-cart" href="/cart" aria-label="{{ t['cart.view_cart'] }}, {{ cart.item_count | pluralize: t['navigation.item'], t['navigation.items'] }}">
           <svg aria-hidden="true" fill="currentColor" width="23" height="20" viewBox="0 0.5 22.28 20.03">
             <path d="M0 1.4375C0 0.929688 0.390625 0.5 0.9375 0.5H2.69531C3.55469 0.5 4.33594 1.00781 4.6875 1.75H20.7422C21.7578 1.75 22.5 2.72656 22.2266 3.74219L20.625 9.67969C20.3125 10.9297 19.1797 11.75 17.9297 11.75H6.64062L6.875 12.8828C6.95312 13.3125 7.34375 13.625 7.77344 13.625H19.0625C19.5703 13.625 20 14.0547 20 14.5625C20 15.1094 19.5703 15.5 19.0625 15.5H7.77344C6.44531 15.5 5.27344 14.5625 5.03906 13.2344L3.00781 2.64844C2.96875 2.49219 2.85156 2.375 2.69531 2.375H0.9375C0.390625 2.375 0 1.98438 0 1.4375ZM5 18.625C5 17.9609 5.35156 17.375 5.9375 17.0234C6.48438 16.6719 7.22656 16.6719 7.8125 17.0234C8.35938 17.375 8.75 17.9609 8.75 18.625C8.75 19.3281 8.35938 19.9141 7.8125 20.2656C7.22656 20.6172 6.48438 20.6172 5.9375 20.2656C5.35156 19.9141 5 19.3281 5 18.625ZM18.125 16.75C18.7891 16.75 19.375 17.1406 19.7266 17.6875C20.0781 18.2734 20.0781 19.0156 19.7266 19.5625C19.375 20.1484 18.7891 20.5 18.125 20.5C17.4219 20.5 16.8359 20.1484 16.4844 19.5625C16.1328 19.0156 16.1328 18.2734 16.4844 17.6875C16.8359 17.1406 17.4219 16.75 18.125 16.75Z"></path>
           </svg>
@@ -300,10 +291,10 @@
       <div class="wrapper">
         <nav class="footer-nav footer-nav--links" aria-label="Secondary">
           <div class="footer-nav--container">
-            <div class="footer-nav-title">Shop</div>
+            <div class="footer-nav-title">{{ t['navigation.shop'] }}</div>
             <ul class="footer-nav--primary">
-              <li><a href="/">{{ pages.home.name }}</a></li>
-              <li><a href="/products">{{ pages.products.name }}</a></li>
+              <li><a href="/">{{ t['navigation.home'] }}</a></li>
+              <li><a href="/products">{{ t['navigation.products'] }}</a></li>
               
 
               {% comment %}Include categories with products link to minimize columns if custom pages are shown{% endcomment %}
@@ -339,7 +330,7 @@
                     {% endif %}
 
                     {% if store.website != blank %}
-                      <li><a href="{{ store.website }}">Back to site</a></li>
+                      <li><a href="{{ store.website }}">{{ t['navigation.back_to_site'] }}</a></li>
                     {% endif %}
                   </ul>
               </div>
@@ -348,7 +339,7 @@
         {% elsif theme.show_categories_in_footer and categories.active.size > 0 %}
           <nav class="footer-nav footer-nav--links" aria-label="Secondary">
             <div class="footer-nav--container">
-              <div class="footer-nav-title">Categories</div>
+              <div class="footer-nav-title">{{ t['navigation.categories'] }}</div>
               <ul class="footer-nav--secondary">
                 {% for category in categories.active %}
                   <li>{{ category | link_to }}</li>
@@ -373,7 +364,7 @@
           or theme.tumblr_url != blank
           or theme.bandcamp_url != blank %}
           <nav class="footer-nav footer-nav--social" aria-label="Social links">
-            <div class="footer-nav-title">Social</div>
+            <div class="footer-nav-title">{{ t['navigation.social'] }}</div>
             <ul class="social-links">
               {% if theme.instagram_url != blank %}
                 <li><a href="{{ theme.instagram_url }}" title="Instagram"><svg class="instagram-icon" height="36" width="36" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 45.39c67.27 0 75.23.26 101.8 1.47 24.56 1.12 37.9 5.22 46.78 8.67a78 78 0 0129 18.85 78 78 0 0118.85 29c3.45 8.88 7.55 22.22 8.67 46.78 1.21 26.57 1.47 34.53 1.47 101.8s-.26 75.23-1.47 101.8c-1.12 24.56-5.22 37.9-8.67 46.78a83.51 83.51 0 01-47.81 47.81c-8.88 3.45-22.22 7.55-46.78 8.67-26.56 1.21-34.53 1.47-101.8 1.47s-75.24-.26-101.8-1.47c-24.56-1.12-37.9-5.22-46.78-8.67a78 78 0 01-29-18.85 78 78 0 01-18.85-29c-3.45-8.88-7.55-22.22-8.67-46.78-1.21-26.57-1.47-34.53-1.47-101.8s.26-75.23 1.47-101.8c1.12-24.56 5.22-37.9 8.67-46.78a78 78 0 0118.85-29 78 78 0 0129-18.85c8.88-3.45 22.22-7.55 46.78-8.67 26.57-1.21 34.53-1.47 101.8-1.47m0-45.39c-68.42 0-77 .29-103.87 1.52S102.92 7 86.92 13.22a123.68 123.68 0 00-44.64 29.06 123.68 123.68 0 00-29.06 44.64c-6.22 16-10.48 34.34-11.7 61.15S0 183.5 0 256s.29 77 1.52 103.87 5.48 45.13 11.7 61.13a123.68 123.68 0 0029.06 44.62 123.52 123.52 0 0044.64 29.07c16 6.23 34.34 10.49 61.15 11.71s35.45 1.52 103.87 1.52 77-.29 103.87-1.52 45.11-5.48 61.11-11.71a128.74 128.74 0 0073.69-73.69c6.23-16 10.49-34.34 11.71-61.15s1.52-35.45 1.52-103.87-.29-77-1.52-103.87-5.48-45.11-11.71-61.11a123.52 123.52 0 00-29.05-44.62 123.68 123.68 0 00-44.64-29.08c-16-6.22-34.34-10.48-61.15-11.7S320.34 0 251.92 0z"/><path fill="currentColor" d="M251.92 122.56a129.36 129.36 0 10129.36 129.36 129.35 129.35 0 00-129.36-129.36zm0 213.36a84 84 0 1184-84 84 84 0 01-84 84z"/><circle fill="currentColor" cx="386.4" cy="117.44" r="30.23"/></svg>Instagram</a></li>
@@ -460,7 +451,7 @@
               </button>
               <form class="search-form" name="search" action="/products" method="get" accept-charset="utf8" role="search">
                 <input type="hidden" name="utf8" value='✓'>
-                <label for="desktop-search">Search products</label>
+                <label for="desktop-search">{{ t['navigation.search'] }}</label>
                 <input class="search-input" id="desktop-search" name="search" type="search" autocomplete="off" />
                 <button type="submit" class="button search-button" aria-label="Submit search form">
                   <svg aria-hidden="true" fill="currentColor" width="20" height="20" viewBox="0 0.5 19.99 20.03">
@@ -487,8 +478,8 @@
         heroButtonBehavior: "{{ theme.hero_button_behavior }}",
         showSoldOutOptions: {{ theme.show_sold_out_product_options }},
         showLowInventoryMessages: {{ theme.show_low_inventory_messages }},
-        lowInventoryMessage: "{{ theme.low_inventory_message | replace: '"', '\"' | replace: "'", "\\'" }}",
-        almostSoldOutMessage: "{{ theme.almost_sold_out_message | replace: '"', '\"' | replace: "'", "\\'" }}",
+        lowInventoryMessage: "{{ t['products.low_inventory'] | replace: '"', '\"' | replace: "'", "\\'" }}",
+        almostSoldOutMessage: "{{ t['products.almost_sold_out'] | replace: '"', '\"' | replace: "'", "\\'" }}",
         desktopProductPageImages: '{{ theme.desktop_product_page_images }}',
         mobileProductPageImages: '{{ theme.mobile_product_page_images }}',
         productImageZoom: {{ theme.product_image_zoom }},
@@ -501,6 +492,11 @@
         primaryTextColor: '{{ theme.text_color }}',
         headerTextColor: '{{ theme.header_text_color }}',
         productHoverOverlayColor: '{{ theme.product_hover_overlay_color }}',
+      };
+      const themeTranslations = {
+        cart: {
+          shareThisCartLinkCopySuccess: "{{ t['cart.share_this_cart_link_copy_success'] | replace: '"', '\"' | replace: "'", "\\'" }}"
+        }
       };
     </script>
     {% if theme.announcement_message_text != blank %}
