--- a/source/products.html
+++ b/source/products.html
@@ -124,6 +124,6 @@
       </nav>
     {% endif %}
   {% else %}
-    <div class="message-banner message-banner--centered message-banner--no-bg">{{ t['navigation.no_products'] }}</div>
+    <div class="message-banner message-banner--centered message-banner--no-bg">{{ t['products.no_products'] }}</div>
   {% endif %}
 {% endpaginate %}
