chore: add `data-bc-hook` for page content and product containers

--- a/source/layout.html
+++ b/source/layout.html
@@ -273,7 +273,7 @@
       </a>
     </header>
     <main id="main">
-      <div class="content-wrapper content-wrapper--{{ page.permalink }} {{ theme.hero_image_width }}">
+      <div class="content-wrapper content-wrapper--{{ page.permalink }} {{ theme.hero_image_width }}" data-bc-hook="content">
         {% if page.category == 'custom' %}
           <div class="custom-page">
             <h1 class="page-title">{{ page.name }}</h1>
